Header+HomePage+Footer (#3)
* Minor changes
Testing new branch

* Footer update

* -Refactor FeaturesPage to MapPage
-Change address '/features' to '/map'

* Cosmetic commit

-Change banner and icon
-Delete excess for home page
-Correct descriptions and etc.

* Home page commit

-Add folder for ready maps
-Add button to load maps' list
-Add feature to display maps' list with its elements as links to /map page
-Start work on READ_MAP action

--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
   <meta name="mobile-web-app-capable" content="yes">
 
   <link rel="icon" href="/icon1.ico" />
-  <title>React.js Boilerplate</title>
+  <title>MapViewer</title>
 </head>
 
 <body>
